--- a/index.html
+++ b/index.html
@@ -3,36 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-  <title>PrimeSec Cybersecurity</title>
+  <title>Exact Hero Section with Original Gradient</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* Reset & container scroll fixes */
-    html, body {
-      padding: 0;
+    * {
       margin: 0;
-      height: 100vh;
-      min-height: 100vh; /* Extra vigilance for mobile browser inconsistencies */
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    html, body {
+      height: 100%;
       width: 100%;
-      overflow: hidden;  /* Prevent unwanted scrollbars */
+      overflow-x: hidden;
     }
 
     body {
-      font-family: 'Open Sans', sans-serif;
-      background-color: #0f172a; /* Optional dark background */
-      -webkit-overflow-scrolling: touch;
-      position: relative;
+      min-height: 100vh;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch; /* Smooth scrolling on mobile */
     }
 
     section {
-      height: 100vh;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 1rem;
-      text-align: center;
+      height: auto;
       overflow: hidden;
+    }
+
+    .container {
+      max-width: 100%; /* Prevent container from causing overflow */
+      overflow: visible;
     }
 
     .gradient-text {
@@ -62,33 +61,27 @@
       0% { background-position: 0% 50%; }
       100% { background-position: 100% 50%; }
     }
-
-    .button-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
-      margin-top: 2rem;
-    }
   </style>
 </head>
-<body class="text-white">
-  <section>
-    <h2 class="text-4xl md:text-6xl font-extrabold mb-6">
-      Next-Generation <span class="gradient-text">Cybersecurity</span>
-    </h2>
-    <p class="text-lg md:text-xl text-gray-300 max-w-xl mx-auto">
-      Protecting your digital assets with cutting-edge technology and expert strategies. PrimeSec offers comprehensive security solutions tailored to your business needs.
-    </p>
-    <div class="button-container">
-      <a href="#services"
-         class="bg-custom-gradient text-white font-semibold py-3 px-8 rounded-lg text-lg transition duration-300 transform hover:scale-105">
-        Our Services
-      </a>
-      <a href="#contact"
-         class="text-cyan-400 border-2 border-cyan-400 font-semibold py-3 px-8 rounded-lg text-lg transition duration-300 transform hover:scale-105 hover:bg-cyan-400 hover:text-gray-900">
-        Request a Demo
-      </a>
+<body class="text-white font-sans">
+  <section class="py-20 md:py-32 px-4 text-center">
+    <div class="container mx-auto">
+      <h2 class="text-4xl md:text-6xl font-extrabold mb-6">
+        Next-Generation <span class="gradient-text">Cybersecurity</span>
+      </h2>
+      <p class="text-lg md:text-xl text-gray-300 mb-10 max-w-3xl mx-auto">
+        Protecting your digital assets with cutting-edge technology and expert strategies. PrimeSec offers comprehensive security solutions tailored to your business needs.
+      </p>
+      <div class="flex justify-center space-x-4">
+        <a href="#services"
+          class="bg-custom-gradient text-white font-semibold py-3 px-8 rounded-lg text-lg transition duration-300 transform hover:scale-105">
+          Our Services
+        </a>
+        <a href="#contact"
+          class="text-cyan-400 border-2 border-cyan-400 font-semibold py-3 px-8 rounded-lg text-lg transition duration-300 transform hover:scale-105 hover:bg-cyan-400 hover:text-gray-900">
+          Request a Demo
+        </a>
+      </div>
     </div>
   </section>
 </body>
